Fix font too big on html error

--- a/css/ppt.css
+++ b/css/ppt.css
@@ -3,7 +3,8 @@
     RMD to PPT Conversion
 =========================================
 */
-body { font-size: 30px !important; }
+/* Set Default font size and enable auto adjust on css zoom */
+body { font-size: 30px !important; -webkit-text-size-adjust: auto;}
 h1 { font-size: 3em; }
 h2 { font-size: 2.0em; }
 h3 { font-size: 1.8em; }
